# emerald

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
docs/: README.md  _sidebar.md  compound_statements.md  expressions.md  index.html  language-reference.md  modules.md  native-modules.md  native-types.md  simple_statements.md  types.md
examples/: animal.em  array.em  bytecode.em  cloning.em  collatz.em  datetime.em  fibonacci.em  helloworld.em  helloworld.emc  inheritance.em  io.em  process.em  test.em
examples/csv/: csv_reader.em  data.csv
examples/http/: client.em
examples/io/: filestream.em
examples/json/: deserialize.em
examples/net/: tcp.em
grammar/: emerald.ebnf
include/emerald/: ast.h  ast_printer.h  blocking_queue.h  check.h  code.h  code_cache.h  colors.h  compiler.h  concurrent_map.h  config.h  data_stack.h  event_loop.h  event_source.h  execution_context.h  globals.h  heap.h  heap_managed.h  heap_root_source.h  interpreter.h  iterutils.h  magic_methods.h  mailbox.h  module.h  module_registry.h  native_frame.h  native_objects.h  native_prototypes.h  native_stack.h  native_variables.h  no_copy.h  object.h  objectutils.h  opcode.h  parser.h  process.h  process_map.h  reporter.h  run_queue.h  scanner.h  scheduler.h  (+7 more)
include/emerald/modules/: bytecode.h  collections.h  core.h  datetime.h  gc.h  init.h  io.h  net.h  process.h
include/emerald/natives/: array.h  boolean.h  exception.h  number.h  object.h  string.h  utils.h
lib/: csv.em  http.em  json.em
src/: ast_printer.cpp  code.cpp  code_cache.cpp  compiler.cpp  data_stack.cpp  globals.cpp  heap.cpp  heap_managed.cpp  interpreter.cpp  mailbox.cpp  main.cpp  module.cpp  module_registry.cpp  native_frame.cpp  native_objects.cpp  native_prototypes.cpp  native_stack.cpp  object.cpp  opcode.cpp  parser.cpp  process.cpp  reporter.cpp  scanner.cpp  scheduler.cpp  semantic_checker.cpp  source.cpp  stack.cpp  thread_pool.cpp  token.cpp  vm.cpp
src/modules/: bytecode.cpp  collections.cpp  core.cpp  datetime.cpp  gc.cpp  init.cpp  io.cpp  net.cpp  process.cpp
src/natives/: array.cpp  boolean.cpp  exception.cpp  number.cpp  object.cpp  string.cpp
test/: main.cpp  string_natives.cpp
